Add image_upload page

--- a/imageboard/templates/imageboard/image_list.html
+++ b/imageboard/templates/imageboard/image_list.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div>
+    <a href="{% url 'image_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
     <h1><a href="/">Top images</a></h1>
 </div>
 {% for image in images %}
