--- a/imageboard/templates/imageboard/index.html
+++ b/imageboard/templates/imageboard/index.html
@@ -29,6 +29,13 @@
 <!--===============================================================================================-->
 </head>
 <body>
+	<div class="header">
+		<div class="header__section">
+			<div class="header__item headerButton">
+				<a href="/board">Board</a>
+			</div>
+		</div>
+	</div>
 	
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url({% static 'images/bg-01.jpg'%});">
@@ -39,7 +46,7 @@
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="User name">
+						<input class="input100" type="text" name="login" placeholder="Login">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
@@ -48,11 +55,20 @@
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
+					<form method="post">
+					{% csrf_token %}
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn">
+						<button class="login100-form-btn" type="submit">
 							Login
 						</button>
 					</div>
+
+					<div class="container-login100-form-btn m-t-32">
+						<button class="login100-form-btn">
+							Register
+						</button>
+					</div>
+					</form>
 
 				</form>
 			</div>
