--- a/imageboard/templates/imageboard/index.html
+++ b/imageboard/templates/imageboard/index.html
@@ -23,36 +23,23 @@
           
           <form action="/" method="post">
           
-          <div class="top-row">
+          
             <div class="field-wrap">
               <label>
-                First Name<span class="req">*</span>
+                Set Login<span class="req">*</span>
               </label>
               <input type="text" required autocomplete="off" />
             </div>
-        
-            <div class="field-wrap">
-              <label>
-                Last Name<span class="req">*</span>
-              </label>
-              <input type="text"required autocomplete="off"/>
-            </div>
-          </div>
-
-          <div class="field-wrap">
-            <label>
-              Email Address<span class="req">*</span>
-            </label>
-            <input type="email"required autocomplete="off"/>
-          </div>
           
+          
+
           <div class="field-wrap">
             <label>
               Set A Password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
-          
+        
           <button type="submit" class="button button-block"/>Get Started</button>
           
           </form>
@@ -66,9 +53,9 @@
           
             <div class="field-wrap">
             <label>
-              Email Address<span class="req">*</span>
+              Login<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input type="text"required autocomplete="off"/>
           </div>
           
           <div class="field-wrap">
