--- a/imageboard/templates/imageboard/login.html
+++ b/imageboard/templates/imageboard/login.html
@@ -34,17 +34,18 @@
 		<div class="container-login100" style="background-image: url({% static 'images/bg-01.jpg' %});">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
+					{{error}}
 					Account Login
 				</span>
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="Login">
+						<input class="input100" type="text" name="login" placeholder="Login">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="password" placeholder="Password">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
