--- a/imageboard/templates/imageboard/registration.html
+++ b/imageboard/templates/imageboard/registration.html
@@ -32,29 +32,30 @@
 	
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url({% static 'images/bg-01.jpg' %});">
+			<form method="post" action="/registration" >
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
+					{{error}}
 					Account Login
 				</span>
 				<form class="login100-form validate-form p-b-33 p-t-5">
-
+					{% csrf_token %}
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="Set Login">
+						<input class="input100" type="text" name="login" placeholder="Set Login">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Set Password">
+						<input class="input100" type="password" name="password" placeholder="Set Password">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
-					<form action="/registration" method="post">
+					
 						<div class="container-login100-form-btn m-t-32">
-							<button class="login100-form-btn" >
+							<button class="login100-form-btn" type="submit">
 								Register now!!!
 							</button>
 						</div>
-					</form>
 
 					<form action="/">
 						<div class="container-login100-form-btn m-t-32">
@@ -63,9 +64,9 @@
 							</button>
 						</div>
 					</form>
-
 				</form>
 			</div>
+			</form>
 		</div>
 	</div>
 	
