--- a/imageboard/templates/imageboard/image_list.html
+++ b/imageboard/templates/imageboard/image_list.html
@@ -10,14 +10,22 @@
 </head>
 <body>
 <div>
-    <a href="{% url 'image_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    <a href="{% url 'image_new' %}" class="top-menu"><span
+            class="glyphicon glyphicon-plus"></span></a>
     <h1><a href="/">Top images</a></h1>
 </div>
 {% for image in images %}
     <div>
-        <h1><a href="{% url 'image_detail' pk=image.pk %}">{{ image.title }}</a></h1>
+        <h1>
+            <a href="{% url 'image_detail' pk=image.pk %}">{{ image.title }}</a>
+        </h1>
         <p>owner: {{ image.owner }}</p>
         <img src="{{ image.image.url }}" width="200px" height="200px">
+        <p>
+            <button type="button"><i class="fa fa-thumbs-up"
+                                     style="font-size:20px;color:black;"></i> {{ image.likes }}
+            </button>
+        </p>
     </div>
 {% endfor %}
 </body>
