--- a/imageboard/templates/imageboard/registration.html
+++ b/imageboard/templates/imageboard/registration.html
@@ -44,10 +44,22 @@
     <form method="POST">
         {% csrf_token %}
         {{ register_form }}
-        <button class="btn btn-primary" type="submit">Register</button>
+        <p>
+            <button class="btn btn-primary" type="submit">Register</button>
+        </p>
     </form>
     <p class="text-center">If you already have an account, <a href="/login">login</a>
         instead.</p>
+    {% if messages %}
+        <b>
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %}
+                        class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </b>
+    {% endif %}
 </div>
 
 
