--- a/imageboard/templates/imageboard/login.html
+++ b/imageboard/templates/imageboard/login.html
@@ -40,13 +40,27 @@
 <body>
 
 <div class="container py-5">
-  <h1>Login</h1>
-  <form method="POST">
-    {% csrf_token %}
-    {{ login_form }}
-    <button class="btn btn-primary" type="submit">Login</button>
-  </form>
-  <p class="text-center">Don't have an account? <a href="/registration">Create an account</a>.</p>
+      <h1>Login</h1>
+      <form method="POST">
+          {% csrf_token %}
+          {{ login_form }}
+          <p>
+              <button class="btn btn-primary" type="submit">Login</button>
+          </p>
+      </form>
+      <p class="text-center">Don't have an account? <a href="/registration">Create
+          an account</a>.</p>
+      {% if messages %}
+          <b>
+              <ul class="messages">
+                  {% for message in messages %}
+                      <li{% if message.tags %}
+                          class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                  {% endfor %}
+              </ul>
+          </b>
+      {% endif %}
+  
 </div>
 
 
