Button to add images

--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -31,5 +31,8 @@
             {{form.info}} 
             <button type="submit">Change</button>
         </form></p>
+        <p>
+            <a class="btn btn-primary" href="/image/new">Add picture</a>
+        </p>
 </body>
 </html>
