Button to add images

--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -42,5 +42,8 @@
             <img src="{{ pic.image.url }}" width="200px" height="200px">
             </div>
         {% endfor %}
+        <p>
+            <a class="btn btn-primary" href="/image/new">Add images</a>
+        </p>
 </body>
 </html>
