--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -45,5 +45,9 @@
         <p>
             <a class="btn btn-primary" href="/image/new">Add images</a>
         </p>
+
+        <p>
+            <a class="btn btn-primary" href="/profile/recovery">Recover Image</a>
+        </p>
 </body>
 </html>
