--- a/imageboard/templates/imageboard/recovery.html
+++ b/imageboard/templates/imageboard/recovery.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Registration</title>
+    <title>Recovery</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
