--- a/imageboard/templates/imageboard/image_board.html
+++ b/imageboard/templates/imageboard/image_board.html
@@ -42,14 +42,14 @@
 </head>
 <body>
 <div>
-    <a href="{% url 'image_new' %}" class="top-menu">
+      <a href="{% url 'image_upload' %}" class="top-menu">
         <span class="glyphicon glyphicon-plus">Upload Image</span>
-        </a>
+      </a>
             <a href="/board"><h1>Top images</h1></a>
 </div>
 {% for image in images %}
     <div>
-        <a href="{% url 'image_detail' image_token=image.token %}">
+        <a href="{% url 'image_info' image_token=image.token %}">
             <h1>{{ image.title }}</h1></a>
 
         <p>owner: {{ image.owner }}</p>
