--- a/imageboard/templates/imageboard/image_info.html
+++ b/imageboard/templates/imageboard/image_info.html
@@ -42,14 +42,22 @@
 </head>
 <body>
 <div>
+    {% if messages %}
+            <b>
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li{% if message.tags %}
+                            class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </b>
+    {% endif %}
+
+
     <h1>{{ image.title }}</h1>
     <h2>Token: {{ image.token }}</h2>
     <p> <b>Owner:</b> {{ image.owner }}</p>
-    {% if secret_str != '' %}
-        <p> <b>Secret:</b> {{ secret_str }}</p>
-    {% else %}
-        <p> <b>Secret:</b>****</p>
-    {% endif %}
+    
     <p> <b>Published date:</b> {{ image.date_last_own }}</p>
     <img src="{{ image.image.url }}" width="200px" height="200px">
     <p>
@@ -58,16 +66,16 @@
            style="font-size: 60px;cursor: pointer;user-select: none;"></i> {{ image.likes }}
 
     <form id="likebutton" method="POST"
-          action="/image/{{ image.token }}/preference/">
+          action="/image/{{ image.token }}/likes/">
         {% csrf_token %}
         <input type="hidden">
     </form>
     </p>
     <p>
         <b> Users who liked this image: </b>
-        {% for preference in preferences %}
+        {% for like in likes %}
             <div>
-                <p> {{ preference.user }} </p>
+                <p> {{ like.user }} </p>
             </div>
         {% endfor %}
     </p>
