--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -6,44 +6,35 @@
     <title>Profile</title>
 </head>
 <body>
-        <p>Name: {{user_info.name}}  
-        <form method = "post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.name}} 
-            <button type="submit">Change</button>
-        </form></p>
-        <p>Second Name: {{user_info.second_name}}
-            <form method = "post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{form.second_name}} 
-                <button type="submit">Change</button>
-            </form>
-        </p>
-        <p>{{ user_info.avatar }}
-            <form method = "post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{form.avatar}} 
-                <button type="submit">Change</button>
-            </form>
-        </p>
-        <p>About me: {{user_info.info}}
-            <form method = "post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.info}} 
-            <button type="submit">Change</button>
-        </form></p>
+    {% if messages %}
+    <b>
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %}
+                    class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </b>
+    {% endif %}
+
+        <p>Name: {{user_info.name}}</p>
+        <p>Second Name: {{user_info.second_name}}</p>
+        <p>About me: {{user_info.info}}</p>
+        <div>
+            <a href="/profile/{{user_info.id}}/change_profile">Change profile info</a>
+        </div>
         <div>
             <a href="/board">Top Images</a>
         </div>
         {% for pic in pics %}
             <div>
-            <a href="{% url 'image_detail' image_token=pic.token %}">
+            <a href="{% url 'image_info' image_token=pic.token %}">
                 <h1>{{ pic.title }}</h1></a>
             <img src="{{ pic.image.url }}" width="200px" height="200px">
             </div>
         {% endfor %}
         <p>
-            <a class="btn btn-primary" href="/image/new">Add images</a>
+            <a class="btn btn-primary" href="/image/upload">Add images</a>
         </p>
 
         <p>
