--- a/imageboard/templates/imageboard/change_profile.html
+++ b/imageboard/templates/imageboard/change_profile.html
@@ -42,6 +42,11 @@
 </head>
 <body>
     <div class="container py-5">
+
+        <div>
+            <a href="/my_profile">My page</a>
+        </div>
+
         <h1>Enter your information:</h1>
         <form method="POST">
             {% csrf_token %}
