--- a/imageboard/templates/imageboard/other_profile.html
+++ b/imageboard/templates/imageboard/other_profile.html
@@ -6,6 +6,10 @@
     <title>Profile</title>
 </head>
 <body>
+    <div>
+        <a href="/my_profile">My page</a>
+    </div>
+
         <p>Name: {{user_info.name}}</p>  
         <p>Second Name: {{user_info.second_name}}</p>
         <p>{{ user_info.avatar }}</p>
