--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -24,6 +24,9 @@
             <a href="/profile/{{user_info.id}}/change_profile">Change profile info</a>
         </div>
         <div>
+            <a href="/my_profile">My page</a>
+        </div>
+        <div>
             <a href="/board">Top Images</a>
         </div>
         {% for pic in pics %}
