--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -1,12 +1,45 @@
-{%load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png"
+          href="{% static 'images/icons/favicon.ico' %}"/>
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'fonts/Linearicons-Free-v1.0.0/icon-font.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/animate/animate.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/css-hamburgers/hamburgers.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/animsition/css/animsition.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/select2/select2.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'vendor/daterangepicker/daterangepicker.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <!--===============================================================================================-->
 </head>
 <body>
-    {% if messages %}
+{% if messages %}
     <b>
         <ul class="messages">
             {% for message in messages %}
@@ -15,41 +48,60 @@
             {% endfor %}
         </ul>
     </b>
-    {% endif %}
+{% endif %}
 
-        <p>Name: {{user_info.name}}</p>
-        <p>Second Name: {{user_info.second_name}}</p>
-        <p>About me: {{user_info.info}}</p>
-        <div>
-            <a href="/profile/{{user_info.id}}/change_profile">Change profile info</a>
-        </div>
-        <div>
-            <a href="/my_profile">My page</a>
-        </div>
-        <div>
-            <a href="/board">Top Images</a>
-        </div>
-        {% for pic in pics %}
-            <div>
-            <a href="{% url 'image_info' image_token=pic.0.token %}">
-                <h1>{{pic.0.title}}</h1></a>
-            <img src="{{ pic.0.image.url }}" width="200px" height="200px">
-            <form method="POST" action="/image/{{pic.0.token}}/">
-                {% csrf_token %}
-                {{ pic.1.public }}
-                {{ pic.1.public.label }}
-                <p>
-                    <button class="btn btn-primary" type="submit">Change</button>
-                </p>
-            </form>
-            </div>
-        {% endfor %}
-        <p>
-            <a class="btn btn-primary" href="/image/upload">Add images</a>
-        </p>
+<h3>Name: {{ user_info.name }}</h3>
+<h3>Second Name: {{ user_info.second_name }}</h3>
+<h3>About me: {{ user_info.info }}</h3>
+<div>
+    <a href="/profile/{{ user_info.id }}/change_profile">Change profile
+        info</a>
+</div>
+<div>
+    <a href="/my_profile">My page</a>
+</div>
+<div>
+    <a href="/board">Top Images</a>
+</div>
+{% for pic in pics %}
+    <div>
+        <a href="{% url 'image_info' image_token=pic.0.token %}">
+            <h1>{{ pic.0.title }}</h1></a>
+        <img src="{{ pic.0.image.url }}" width="200px" height="200px">
+        <form method="POST" action="/image/{{ pic.0.token }}/">
+            {% csrf_token %}
+            {{ pic.1.public }}
+            {{ pic.1.public.label }}
+            <p>
+                <button class="btn btn-primary" type="submit">Change</button>
+            </p>
+        </form>
+    </div>
+{% endfor %}
+<br>
+<p>
+    <a class="btn btn-primary" href="/image/upload">Add images</a>
+</p>
+<br>
+<p>
+    <a class="btn btn-primary" href="/profile/recovery">Recover Image</a>
+</p>
 
-        <p>
-            <a class="btn btn-primary" href="/profile/recovery">Recover Image</a>
-        </p>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
+<script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
