--- a/imageboard/templates/imageboard/change_profile.html
+++ b/imageboard/templates/imageboard/change_profile.html
@@ -41,32 +41,50 @@
 
 </head>
 <body>
-    <div class="container py-5">
+<div class="container py-5">
 
-        <div>
-            <a href="/my_profile">My page</a>
-        </div>
+    <div>
+        <a href="/my_profile">My page</a>
+    </div>
 
-        <h1>Enter your information:</h1>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form }}
-            <p>
-                <button class="btn btn-primary" type="submit">Change</button>
-            </p>
-        </form>
+    <h1>Enter your information:</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <p>
+            <button class="btn btn-primary" type="submit">Change</button>
+        </p>
+    </form>
 
-        {% if messages %}
-            <b>
-                <ul class="messages">
-                    {% for message in messages %}
-                        <li{% if message.tags %}
-                            class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            </b>
-        {% endif %}
-    
-  </div>
+    {% if messages %}
+        <b>
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %}
+                        class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </b>
+    {% endif %}
+
+</div>
+
+<!--===============================================================================================-->
+<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
+<script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'js/main.js' %}"></script>
+
 </body>
 </html>
