--- a/imageboard/templates/imageboard/image_board.html
+++ b/imageboard/templates/imageboard/image_board.html
@@ -41,23 +41,41 @@
 
 </head>
 <body>
-      <div>
-            <a href="/my_profile">My page</a>
-      </div>
 <div>
-      <a href="{% url 'image_upload' %}" class="top-menu">
+    <a href="/my_profile">My page</a>
+</div>
+<div>
+    <a href="{% url 'image_upload' %}" class="top-menu">
         <span class="glyphicon glyphicon-plus">Upload Image</span>
-      </a>
-            <a href="/board"><h1>Top images</h1></a>
+    </a>
+    <a href="/board"><h1>Top images</h1></a>
 </div>
 {% for image in images %}
     <div>
         <a href="{% url 'image_info' image_token=image.token %}">
             <h1>{{ image.title }}</h1></a>
-            
-        <p>owner:<a href="profile/{{ image.owner.id }}">{{ image.owner }}</a></p>
+
+        <p>owner:<a href="profile/{{ image.owner.id }}">{{ image.owner }}</a>
+        </p>
         <img src="{{ image.image.url }}" width="200px" height="200px">
     </div>
 {% endfor %}
+
+<!--===============================================================================================-->
+<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
+<script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'vendor/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
