Add link to moderator profile, fix moderator access to private images

--- a/imageboard/templates/imageboard/other_profile.html
+++ b/imageboard/templates/imageboard/other_profile.html
@@ -42,10 +42,10 @@
     <a href="/my_profile">My page</a>
 </div>
 
-<p>Name: {{ user_info.name }}</p>
-<p>Second Name: {{ user_info.second_name }}</p>
-<p>{{ user_info.avatar }}</p>
-<p>About me: {{ user_info.info }}</p>
+<h3>Name: {{ user_info.name }}</h3>
+<h3>Second Name: {{ user_info.second_name }}</h3>
+<h3>{{ user_info.avatar }}</h3>
+<h3>About me: {{ user_info.info }}</h3>
 <div>
     <a href="/board">Top Images</a>
 </div>
