--- a/imageboard/templates/imageboard/get_images.html
+++ b/imageboard/templates/imageboard/get_images.html
@@ -50,64 +50,25 @@
     </b>
 {% endif %}
 
-<h3>Name: {{ user_info.name }}</h3>
-<h3>Second Name: {{ user_info.second_name }}</h3>
-<h3>About me: {{ user_info.info }}</h3>
 <div>
-    <a href="/profile/{{ user_info.id }}/change_profile">Change profile
-        info</a>
+    <a href="/my_profile">Back to my page</a>
 </div>
-<div>
-    <a class="btn btn-primary" href="/profile/{{ user_info.id }}/get_images">View your offers</a>
-</div>
-<img src="{{ avatar.image.url }}" width="200px" height="200px">
-<form method="POST" action="/profile/{{ user_info.id }}/change_avatar">
-    {% csrf_token %}
-    {{ avatar_form.token.label }}
-    {{ avatar_form.token }}
-    <p>
-        <button class="btn btn-primary" type="submit">Change avatar</button>
-    </p>
-</form>
-<div>
-    <a href="/my_profile">My page</a>
-</div>
-<div>
-    <a href="/board">Top Images</a>
-</div>
-{% if user_info.moderator %}
-    <div>
-        <a class="btn btn-primary" href="/moderation/approval_requests">Approve user requests for
-            recover private images</a>
-    </div>
-{% endif %}
+
 {% for pic in pics %}
     <div>
-        <a href="{% url 'image_info' image_token=pic.0.token %}">
-            <h1>{{ pic.0.title }}</h1></a>
-        <img src="{{ pic.0.image.url }}" width="200px" height="200px">
-        <form method="POST" action="/privacy/{{ pic.0.token }}">
+        <a href="{% url 'image_info' image_token=pic.token %}">
+            <h1>{{ pic.title }}</h1></a>
+        <img src="{{ pic.image.url }}" width="200px" height="200px">
+        <form method="POST" action="/profile/{{ user}}/get_images/{{pic.token}}">
             {% csrf_token %}
-            {{ pic.1.public }}
-            {{ pic.1.public.label }}
             <p>
-                <button class="btn btn-primary" type="submit">Change</button>
+                <button class="btn btn-primary" type="submit">Accept image</button>
             </p>
         </form>
     </div>
 {% endfor %}
 <br>
-<p>
-    <a class="btn btn-primary" href="/image/upload">Add images</a>
-</p>
-<br>
-<p>
-    <a class="btn btn-primary" href="/profile/recovery">Recover Image</a>
-</p>
-<br>
-<p>
-    <a class="btn btn-primary" href="/transfer">Transfer Image</a>
-</p>
+
 
 <!--===============================================================================================-->
 <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
